Bug 165586 - A11Y sidebar shows no warnings with GTK backend
Summary: A11Y sidebar shows no warnings with GTK backend
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2025-03-05 13:15 UTC by Gabor Kelemen (Collabora)
Modified: 2025-03-05 17:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot of the issue (83.38 KB, image/png)
2025-03-05 13:15 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-03-05 13:15:34 UTC
Created attachment 199622 [details]
Screenshot of the issue

1. Download attachment 197793 [details]
2. Open in Writer, go to the accessibility sidebar
-> no warnings if the GTK backend is used, but full of warnings with gen.


Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7c806a668530f25730717a12e6f97972f69d9c09
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started in:

https://git.libreoffice.org/core/+/fe8ef5ec0777e2edcddbaf1ed03280fbac05f67d%5E%21

commit fe8ef5ec0777e2edcddbaf1ed03280fbac05f67d	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Wed Feb 05 14:56:23 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Wed Feb 05 17:15:35 2025 +0100
tree 2fc1400f41449645e69ef06d7192649a929dac39
parent 5ff1b4491a79644b6efdd6ddac86d5c41196f9f8 [diff]

loplugin:unusedfields
Comment 1 Commit Notification 2025-03-05 16:49:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e5dbde2aaba22f906fbf6a3d74a2dd4b16fc49df

tdf#165586 sw: fix accessibility sidebar with gtk3

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.