tdf#165586 sw: fix accessibility sidebar with gtk3

No issues are shown.

(regression from commit fe8ef5ec0777e2edcddbaf1ed03280fbac05f67d)

Change-Id: Ic9d6a9f64613f2f5d50a8acdb4b460f3567380b1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182542
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>