sw/source/uibase/sidebar/A11yCheckIssuesPanel.hxx
@@ -63,6 +63,7 @@ class AccessibilityCheckLevel
 {
 private:
     std::unique_ptr<weld::Builder> m_xBuilder;
+    std::unique_ptr<weld::Box> m_xContainer; ///< this is required for gtk3 even if unused
     std::array<std::vector<std::unique_ptr<AccessibilityCheckEntry>>, 11> m_aEntries;
     std::array<std::unique_ptr<weld::Expander>, 11> m_xExpanders;
     std::array<std::unique_ptr<weld::Box>, 11> m_xBoxes;
